Started to update mySobek views and fixed Add Volume logic
- Cleaned HTML to HTML5, move to CSS3, reduce javascript, etc..
  - Added new SobekCM_MySobek.css and sobek_mysobek.js
  - Delete_Item_MySobekViewer
  - Logon_MySobekViewer
    - Also fixed error message not showing problem
    - Remember me is now a label for better UI experience
- Group_Add_Volume_MySobekViewer now correctly clears more elements from base VID
  - PURL
  - Main thumbnail
  - METS Header creator notes
  - Create and Modify date now set to todays date
  - METS Header creator individual/software now set
  - Message in software creator tells which VID this was derived from
- Multiple_Volumes_Item_Viewer
  - Corrected issue where DARK items appeared as private in the list view
  - Corrected DARK items without serial hierarchy not reflecting dark in the tree view
- Corrected problem that a user could not UNRESTRICT an item correctly, even when they had the rights to do so

--- a/SobekCM/default/SobekCM_Metadata.css
+++ b/SobekCM/default/SobekCM_Metadata.css
@@ -589,14 +589,8 @@ select.form_relateditem_select { color:Blue; width: 110px; margin-top: 6px; bord
 .bibid_div { padding-top: 8px; line-height: 1.5; color:Blue; } 
 .vid_div { padding-top: 8px; line-height: 1.5; color:Blue; } 
 
-.logon_popup_div { position:absolute; background-color:#eeeeee; width:400px; height:280px; z-index: 9999; FONT-FAMILY: Arial, sans-serif; font-size: small;  -moz-border-radius: 7px;} 
+
 #form_related_url_div { padding-top: 12px; } 
-input.logon_username_input  {  color:Blue;  width: 180px; margin-top: 6px; border-style:solid; border-width: 1px; border-color: #7f9db9; }
-input.logon_username_input_focused  {  color:#0000a8;  width: 180px; margin-top: 6px; background-color: #fbf7b4; border-style:solid; border-width: 1px; border-color: #7f9db9; }
-input.logon_password_input  {  color:Blue;  width: 180px; margin-top: 6px; border-style:solid; border-width: 1px; border-color: #7f9db9; }
-input.logon_password_input_focused  {  color:#0000a8;  width: 180px; margin-top: 6px; background-color: #fbf7b4; border-style:solid; border-width: 1px; border-color: #7f9db9; }
-
-
 
 .form_serial_hierarchy_line { width: 500px; }
 .serial_hierarchy_popup_div { position:absolute; background-color:#eeeeee; width:565px; height:395px; z-index: 9999; FONT-FAMILY: Arial, sans-serif; font-size: small;  -moz-border-radius: 7px;} 
